// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "height": 200,
      "paddingHorizontal": 30,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "fontSize": 36.5,
      }
    }
  >
    Joey's Alice lake lap
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <RNSVGSvgView
        bbHeight="53.5"
        bbWidth="53.5"
        d={1}
        height={53.5}
        scale={0.08916666666666667}
        size={53.5}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "color": "#069",
            },
            false,
            Object {
              "flex": 0,
              "height": 53.5,
              "width": 53.5,
            },
          ]
        }
        tintColor="#069"
        width={53.5}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              0,
              0,
              0,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              0.08916666666666667,
              0,
              0,
              0.08916666666666667,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={0.08916666666666667}
          scaleY={0.08916666666666667}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        >
          <RNSVGPath
            d="M66 66h472v472H66z"
            fill={
              Array [
                2,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth="1"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#85c131",
            "fontFamily": "ride-time-icons",
            "fontSize": 53.5,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#878787",
              "fontSize": 40,
              "fontWeight": "bold",
              "paddingRight": 3,
            }
          }
        >
          1
        </Text>
        <View
          icon="person"
          size={53.5}
          style={
            Object {
              "color": "#878787",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#878787",
                "fontFamily": "ride-time-icons",
                "fontSize": 53.5,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#E1E1E1",
          "borderRadius": 6,
          "height": 40,
          "marginLeft": "auto",
          "marginRight": 10,
          "width": 112.5,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 26.5,
          }
        }
      >
        2h
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": "auto",
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 46.5,
          }
        }
      >
        11:30
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly with style 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
      "color": "#fff",
      "height": 200,
      "paddingHorizontal": 30,
      "paddingVertical": 20,
    }
  }
>
  <Text
    style={
      Object {
        "backgroundColor": "black",
        "color": "#fff",
        "fontSize": 36.5,
      }
    }
  >
    Joey's Alice lake lap
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <RNSVGSvgView
        bbHeight="53.5"
        bbWidth="53.5"
        d={1}
        height={53.5}
        scale={0.08916666666666667}
        size={53.5}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "color": "#069",
            },
            false,
            Object {
              "flex": 0,
              "height": 53.5,
              "width": 53.5,
            },
          ]
        }
        tintColor="#069"
        width={53.5}
      >
        <RNSVGGroup
          fill={
            Array [
              0,
              0,
              0,
              0,
              1,
            ]
          }
          fillOpacity={1}
          fillRule={1}
          font={Object {}}
          matrix={
            Array [
              0.08916666666666667,
              0,
              0,
              0.08916666666666667,
              0,
              0,
            ]
          }
          opacity={1}
          originX={0}
          originY={0}
          propList={Array []}
          rotation={0}
          scaleX={0.08916666666666667}
          scaleY={0.08916666666666667}
          skewX={0}
          skewY={0}
          stroke={null}
          strokeDasharray={null}
          strokeDashoffset={null}
          strokeLinecap={0}
          strokeLinejoin={0}
          strokeMiterlimit={4}
          strokeOpacity={1}
          strokeWidth="1"
          x={0}
          y={0}
        >
          <RNSVGPath
            d="M66 66h472v472H66z"
            fill={
              Array [
                2,
              ]
            }
            fillOpacity={1}
            fillRule={1}
            matrix={
              Array [
                1,
                0,
                0,
                1,
                0,
                0,
              ]
            }
            opacity={1}
            originX={0}
            originY={0}
            propList={
              Array [
                "fill",
              ]
            }
            rotation={0}
            scaleX={1}
            scaleY={1}
            skewX={0}
            skewY={0}
            stroke={null}
            strokeDasharray={null}
            strokeDashoffset={null}
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeMiterlimit={4}
            strokeOpacity={1}
            strokeWidth="1"
            x={0}
            y={0}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#85c131",
            "fontFamily": "ride-time-icons",
            "fontSize": 53.5,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": 90,
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#878787",
              "fontSize": 40,
              "fontWeight": "bold",
              "paddingRight": 3,
            }
          }
        >
          1
        </Text>
        <View
          icon="person"
          size={53.5}
          style={
            Object {
              "color": "#878787",
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#878787",
                "fontFamily": "ride-time-icons",
                "fontSize": 53.5,
              }
            }
          >
            
          </Text>
        </View>
      </View>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#E1E1E1",
          "borderRadius": 6,
          "height": 40,
          "marginLeft": "auto",
          "marginRight": 10,
          "width": 112.5,
        }
      }
    >
      <Text
        style={
          Object {
            "fontSize": 26.5,
          }
        }
      >
        2h
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "width": "auto",
        }
      }
    >
      <Text
        style={
          Object {
            "backgroundColor": "black",
            "color": "#fff",
            "fontSize": 46.5,
          }
        }
      >
        11:30
      </Text>
    </View>
  </View>
</View>
`;
